pr changes